# ot-harjoitustyo

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
assets/: test_map.map
documentation/: architecture.md  changelog.md  requirements_specification.md  testing.md  usage_instructions.md  working_time_records.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajempi_sekvenssikaavio.md  laajennettu_monopoli.md  monopoli_kaavio.md  sekvenssikaavio.md
src/: app.py
src/gui/: file_menu.py  main_menu.py  main_view.py  manager.py  tile_menu.py
tilemap_editor/: app.py  camera.py  window.py
tilemap_editor/data/: editor.py  map.py  tile.py  view.py
tilemap_editor/gui/: file_browser.py  file_menu.py  main_menu.py  manager.py  tile_menu.py
tilemap_editor/io/: editing_hid.py  keymapping.py  map_loader.py  tile_loader.py  tileset_loader.py
tilemap_editor/tests/: camera_test.py  editing_hid_test.py  editor_test.py  keymapping_test.py  map_loader_test.py  map_test.py  test.map  tileset_loader_test.py  view_test.py
